--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 
 </head>
 <body>
+	<H1>Evelyn Z. Smith</H1>
+	<p>Student at WSU, majoring in English and writing.</p>
+	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
 
 	<p>This is a test.</p>
 
