--- a/index.html
+++ b/index.html
@@ -24,6 +24,20 @@
 	<H1>Evelyn Z. Smith</H1>
 	<p>Student at WSU, majoring in English and writing.</p>
 	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
+	<H2>Activities</H2>
+	<ul>
+		<li>Placeholder 1</li>
+		<li>Placeholder 2</li>
+		<li>Placeholder 3</li>
+	</ul>
+	<H2>Tiny Projects</H2>
+	<ul>
+		<li>Placeholder 1</li>
+		<li>Placeholder 2</li>
+		<li>Placeholder 3</li>
+	</ul>
+	<H2>Major Project</H2>
+	<a href="https://www.google.com/">Placeholder Link</a>
 
 	<p>This is a test.</p>
 
