--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -27,8 +27,10 @@
   <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt=Pineapple upside down cake>
 	<p>Delicious and easy to make, even for inexperience bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
+	<main></main>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
