--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -27,10 +27,35 @@
   <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt=Pineapple upside down cake>
 	<p>Delicious and easy to make, even for inexperience bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
-	<main></main>
+	<main>
+		<section>
+			<h2>Ingredients</h2>
+			<ul>
+				<li>1/4 cup butter</li>
+				<li>1 cup packed brown sugar</li>
+				<li>1 can (20 oz) pineapple slices in juice, drained; save juice</li>
+				<li>1 jar (6 oz) maraschino cherries without stems, drained</li>
+				<li>1 Box Betty Crocker Super Moist Yellow Cake Mix</li>
+				<li>Vegetable oil and eggs (refer to cake mix instructions)</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Directions</h2>
+			<ol>
+				<li>Heat oven to 350°F (325°F for dark or nonstick pan). In 13x9-inch pan, melt butter in oven. Sprinkle brown sugar evenly over butter. Arrange pineapple slices on brown sugar. Place cherry in center of each pineapple slice, and arrange remaining cherries around slices; press gently into brown sugar.</li>
+				<li>Add enough water to reserved pineapple juice to measure 1 cup. Make cake batter as directed on box, substituting pineapple juice mixture for the water. Pour batter over pineapple and cherries.</li>
+				<li>Bake 42 to 48 minutes (44 to 53 minutes for dark or nonstick pan) or until toothpick inserted in center comes out clean. Immediately run knife around side of pan to loosen cake. Place heatproof serving plate upside down onto pan; turn plate and pan over. Leave pan over cake 5 minutes so brown sugar topping can drizzle over cake; remove pan. Cool 30 minutes. Serve warm or cool. Store covered in refrigerator.</li>
+			</ol>
+		</section>
+	</main>
+	<footer>
+		<p>&copy; 2025 Evelyn Z Smith</p>
+		<p>Photo courtesy of Oscar Ivan Esquivel Arteaga via Unsplash</p>
+	</footer>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
 
