--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -24,7 +24,8 @@
 <body>
 <header>
   <h1>Pineapple Upside Down Cake</h1>
-  <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt=Pineapple upside down cake>
+  <img src="eeveezsmith.github.io
+/oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt=Pineapple upside down cake>
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
 	<main>
@@ -56,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
