--- a/favorite-recipe/index.html
+++ b/favorite-recipe/index.html
@@ -25,7 +25,7 @@
 <header>
   <h1>Pineapple Upside Down Cake</h1>
   <img src="eeveezsmith.github.io
-/oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg">
+/oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
 	<main>
@@ -57,6 +57,7 @@
 
 </body>
 </html>
+
 
 
 
