--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</ul>
 	<H2>Tiny Projects</H2>
 	<ul>
-		<li><a href="https://wsu.instructure.com/groups/1280691/discussion_topics/9882673">Tiny Project 2</a></li>
+		<li><a href="eeveezsmith.github.io/favorite-recipe/index.html">Tiny Project 2</a></li>
 		<li>Placeholder 2</li>
 		<li>Placeholder 3</li>
 	</ul>
