--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>HTML Semantic Tags</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -21,8 +21,11 @@
 
 </head>
 <body>
-
+<h1>HTML Semantic Tags</h1>
+	<h2>What is the difference between non-semantic and semantic tags in HTML?</h2>
+	<h2>What are two (or more) benefits of using semantic tags?</h2>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
