--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -23,9 +23,14 @@
 <body>
 <h1>HTML Semantic Tags</h1>
 	<h2>What is the difference between non-semantic and semantic tags in HTML?</h2>
+	<p>
+		<b>Non-semantic tags:</b> tags that have no meaning in ordinary language. For example, the tag "div" gives no indication to a non-programmer as to its purpose.</p>
+	<p>
+		<b>Semantic tags:</b> tags whose names convey a clear meaning, even to people who are not programmers. For example, "heading" and "image."</p>
 	<h2>What are two (or more) benefits of using semantic tags?</h2>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
