--- a/codelogs/log1.html
+++ b/codelogs/log1.html
@@ -28,9 +28,17 @@
 	<p>
 		<b>Semantic tags:</b> tags whose names convey a clear meaning, even to people who are not programmers. For example, "heading" and "image."</p>
 	<h2>What are two (or more) benefits of using semantic tags?</h2>
+	<p><b>Easy reading:</b> Because they look like familiar terms, rather than gibberish, semantic tags are much easier to read. Not only does this aid newcomers in learning to code, but it makes reviewing, editing, and debugging code easier for professionals.</p>
+	<p><b>Accessibility:</b> Semantic tags improve user experience for those using screen readers and other assistive devices.
+</p>
+	<p><b>Search Engine Optimization (SEO):</b> Because search engines look for keywords in a website’s coding, as well as its content, the use of semantic tags can make it easier for people to find your website.
+</p>
+	<p><b>Browser compatibility:</b> Semantic tags in HTML improve compatibility with various web browsers.
+</p>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
 
