--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<a href="https://github.com/EeveeZSmith/eeveezsmith.github.io">Evelyn's GitHub Repository</a>
 	<H2>Activities</H2>
 	<ul>
-		<li>Placeholder 1</li>
+		<li><a href="eeveezsmith.github.io/codelogs/log1.html">Code Log 1</a>
+</li>
 		<li>Placeholder 2</li>
 		<li>Placeholder 3</li>
 	</ul>
