--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -5,7 +5,7 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>CSS Measuring Units</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
@@ -21,7 +21,12 @@
 
 </head>
 <body>
-
+<h1>Absolute Length Units</h1>
+	<p>Absolute length units are those that exist as a definite, independent unit of measurement. Regardless of how or where they are used, they appear as a standard, constant size.</p>
+	<p>Example: 1 pixel (px) is always 1/96th of 1 inch.</p>
+	<h1>Relative Length Units</h1>
+	<p>Relative length units are those whose measurement is determined in relation to something else, such as another object on the page or a percentrage of the screen on which the page is viewed.</p>
+	<p>Example: Viewport width (vw) tells an object to take up a percentage of the device's screen.</p>
 	<!-- HTML elements here -->
 
 </body>
