--- a/codelogs/log2.html
+++ b/codelogs/log2.html
@@ -27,6 +27,15 @@
 	<h1>Relative Length Units</h1>
 	<p>Relative length units are those whose measurement is determined in relation to something else, such as another object on the page or a percentrage of the screen on which the page is viewed.</p>
 	<p>Example: Viewport width (vw) tells an object to take up a percentage of the device's screen.</p>
+	<h2>A Sampling of Length Units</h2>
+	<ul>
+		<li><b>Pixel (px)</b> = 1/96th of 1 inch. A commonly used absolute measurement for images and other objects.</li>
+		<li><b>Point (pt)</b> = 1/72nd of 1 inch. Absolute measurement typically used for font sizes.</li>
+		<li><b>Viewport width (vw)</b> = Width relative to the viewscreen. 10vw would be 10% of the width of the screen.</li>
+		<li><b>Viewport height (vh)</b> = Height relative to the viewscreen. 10vh would be 10% of the height of the screen.</li>
+		<li><b>Inch (in)</b> = 96 pixels. Common, everyday absolute measurement of length, height, width, or depth.</li>
+		<li><b>Pica (pc)</b> = 1/6th of 1 inch. Less common absolute measurement.</li>
+	</ul>
 	<!-- HTML elements here -->
 
 </body>
