--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<ul>
 		<li><a href="eeveezsmith.github.io/codelogs/log1.html">Code Log 1</a>
 </li>
-		<li>Placeholder 2</li>
+		<li><a href="eeveezsmith.github.io/codelogs/log2.html">Code Log2</li>
 		<li>Placeholder 3</li>
 	</ul>
 	<H2>Tiny Projects</H2>
