--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -21,9 +21,14 @@
 
 </head>
 <body>
+	<h1>Designing as Visual Organization</h1>
+	<h2>Excerpts from Chapter 10 of the book On Weaving, by Anni Albers, 1965</h2>
+	<p>It is safe, I suppose, to assume that today most if not all of us have had the experience of looking down from an airplane onto this earth. What we see is a free flow of forms intersected here and there by straight lines, rectangles, circles, and evenly drawn curves; that is, by shapes of great regularity. Here we have, then, natural and man-made forms in contradistinction. And here before us we can recognize the essence of designing a visually comprehensible, simplified organization of forms that is distinct from nature’s secretive and complex working.</p>
+	
 
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
