--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -62,10 +62,14 @@ any given moment of imposed restraint of action — without a bundle of distract
 
 </p>
 	<h2>About the Author</h2>
+	<p>Anni Albers was a renowned textile artist of the 20th century, whose innovations in the art of weaving remain influential to this day. Born in Germany in 1899, she fled to the United States in 1933 to escape the rise of the Nazi party. There, she began a 16-year teaching career at North Carolina’s Black Mountain College.
+</p>
+	<p>Albers continued her exploration of weaving arts until 1970, producing both artistic works and designs for manufactured goods, as well as innovating new styles and techniques. For decades, her artistic works have been featured in museums, and her teachings in textile craft continue to resonate with modern artists and artisans. (Source: <a href="https://www.moma.org/artists/96-anni-albers">Museum of Modern Art</a>)</p>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
 
 
