--- a/anni-albers/index.html
+++ b/anni-albers/index.html
@@ -8,12 +8,13 @@
 	<title>TP3: Layout 1</title>
 
 	<!-- external and internal CSS -->
-	p {
-  margin: 25px;
-}
+
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 		/* in-file CSS here */
+		p {
+  margin: 16.67%;
+}
 	</style>
 
 	<!-- external and internal JavaScript -->
@@ -73,6 +74,7 @@ any given moment of imposed restraint of action — without a bundle of distract
 
 </body>
 </html>
+
 
 
 
