--- a/anni-albers/index2.html
+++ b/anni-albers/index2.html
@@ -10,6 +10,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		div {
+  column-count: 6;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -75,6 +78,7 @@ any given moment of imposed restraint of action — without a bundle of distract
 	</div>
 </body>
 </html>
+
 
 
 
