--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<H2>Tiny Projects</H2>
 	<ul>
 		<li><a href="eeveezsmith.github.io/favorite-recipe/index.html">Tiny Project 2</a></li>
-		<li>Placeholder 2</li>
+		<li>Tiny Project 3 <a href="eeveezsmith.github.io/anni-albers/index.html">Version 1</a> <a href="https://eeveezsmith.github.io/anni-albers/index2.html">Version 2</a></li>
 		<li>Placeholder 3</li>
 	</ul>
 	<H2>Major Project</H2>
