--- a/codelogs/log3.html
+++ b/codelogs/log3.html
@@ -22,7 +22,18 @@
 
 </head>
 <body>
-
+	<h2>How does a CSS media query work, and why is it useful?</h2>
+<p>A CSS media query allows a website’s design to adjust itself to various properties of the specific device a user is browsing on. It does this by giving multiple coded layout options and allowing the browser to pick the one most appropriate for the properties of the device, such as its size and whether it uses a touchscreen. This is called Responsive Design, and it is essential for making websites display and function appropriately for the wide variety of devices now used to access the internet.
+</p>
+	<h2>Examples of Media Features Supported by Media Queries:</h2>
+	<ul>
+		<li><b>Orientation</b> = Adjusts the website layout for landscape or portrait mode</li>
+		<li><b>Hover</b> = If a mouse is being used, allows the website to react when the mouse icon hovers over a certain object
+</li>
+		<li><b>Video Resolution</b> = Determines what level of video quality should be displayed
+</li>
+		<li><b>Prefers Color Scheme</b> = Tells the website top display a light or dark color scheme (if options are available) based on user settings  </li>
+	</ul>
 	<!-- HTML elements here -->
 
 </body>
