--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -22,8 +22,9 @@
 
 </head>
 <body>
-
+<img src="rhododendron/Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
