--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -23,8 +23,18 @@
 </head>
 <body>
 <img src="rhododendron/Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
+	<h1>Rhododendron macrophyllum</h1>
+	<h2>Pacific Rhododendron</h2>
+	<h3>Otherwise known as the California Rhododendron</h3>
+	<p><b>Size</b></p>
+	<p>Shrub or small tree, 3 to 15 feet (1 to 5 m) in height</p>
+	<p><b>Range</b></p>
+	<p>British Columbia to California; west of the Cascades crest and coastal Washington state</p>
+	<p><b>Climate</b></p>
+	<p>Fairly dry open forests and edges; commonly grows along roadsides in the rainshadow of the Olympic Mountains</p>
 	<!-- HTML elements here -->
 
 </body>
 </html>
+
 
