--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -22,7 +22,7 @@
 
 </head>
 <body>
-<img src="rhododendron/Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
+<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
 	<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
 	<h3>Otherwise known as the California Rhododendron</h3>
@@ -36,5 +36,6 @@
 
 </body>
 </html>
+
 
 
