--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -22,7 +22,15 @@
 
 </head>
 <body>
-<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
+<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" 
+	img {
+  border-radius: 8px;
+}
+	img {
+  max-width: 100%;
+  height: auto;
+}
+	alt="Pacific Rhododendron">
 	<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
 	<h3>Otherwise known as the California Rhododendron</h3>
@@ -36,6 +44,7 @@
 
 </body>
 </html>
+
 
 
 
