--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -24,11 +24,8 @@
 <body>
 <img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" 
 	img {
-  border-radius: 8px;
-}
-	img {
-  max-width: 100%;
-  height: auto;
+  width: 1000px;
+  height: auto; /* Height will adjust proportionally */
 }
 	alt="Pacific Rhododendron">
 	<h1>Rhododendron macrophyllum</h1>
@@ -44,6 +41,7 @@
 
 </body>
 </html>
+
 
 
 
