--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -22,12 +22,10 @@
 
 </head>
 <body>
-<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" 
-	img {
+	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron" img {
   width: 500px;
   height: auto; /* Height will adjust proportionally */
-}
-	alt="Pacific Rhododendron">
+}>
 	<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
 	<h3>Otherwise known as the California Rhododendron</h3>
@@ -41,6 +39,7 @@
 
 </body>
 </html>
+
 
 
 
