--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -11,6 +11,10 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		img {
+  width: 500px;
+  height: auto; /* Height will adjust proportionally */
+}
 		/* in-file CSS here */
 	</style>
 
@@ -22,10 +26,7 @@
 
 </head>
 <body>
-	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron" img {
-  width: 500px;
-  height: auto; /* Height will adjust proportionally */
-}>
+	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
 	<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
 	<h3>Otherwise known as the California Rhododendron</h3>
@@ -39,6 +40,7 @@
 
 </body>
 </html>
+
 
 
 
