--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -15,6 +15,15 @@
   width: 500px;
   height: auto; /* Height will adjust proportionally */
 }
+		img {
+  max-width: 100%;
+  height: auto;
+}
+		@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
 		/* in-file CSS here */
 	</style>
 
@@ -40,6 +49,7 @@
 
 </body>
 </html>
+
 
 
 
