--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 	<ul>
 		<li><a href="eeveezsmith.github.io/favorite-recipe/index.html">Tiny Project 2</a></li>
 		<li>Tiny Project 3 <a href="eeveezsmith.github.io/anni-albers/index.html">Version 1</a> <a href="https://eeveezsmith.github.io/anni-albers/index2.html">Version 2</a></li>
-		<li>Placeholder 3</li>
+		<li><a href="eeveezsmith.github.io/rhododendron/index.html">Tiny Project 4</a>
+</li>
 	</ul>
 	<H2>Major Project</H2>
 	<a href="https://www.google.com/">Placeholder Link</a>
