--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -24,6 +24,15 @@
     background-color: lightblue;
   }
 }
+		img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+		p {
+  text-align: center;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -49,6 +58,7 @@
 
 </body>
 </html>
+
 
 
 
