--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -45,9 +45,10 @@
 </head>
 <body>
 	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
-	<h1>Rhododendron macrophyllum</h1>
+	<p>
+		<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
-	<h3>Otherwise known as the California Rhododendron</h3>
+	<h3>Otherwise known as the California Rhododendron</h3></p>
 	<p><b>Size</b></p>
 	<p>Shrub or small tree, 3 to 15 feet (1 to 5 m) in height</p>
 	<p><b>Range</b></p>
@@ -58,6 +59,7 @@
 
 </body>
 </html>
+
 
 
 
