--- a/rhododendron/index.html
+++ b/rhododendron/index.html
@@ -33,6 +33,17 @@
 		p {
   text-align: center;
 }
+		h1 {
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -45,10 +56,10 @@
 </head>
 <body>
 	<img src="Pacific Rhododendron 2 - Gary Monroe-1.jpeg" alt="Pacific Rhododendron">
-	<p>
+
 		<h1>Rhododendron macrophyllum</h1>
 	<h2>Pacific Rhododendron</h2>
-	<h3>Otherwise known as the California Rhododendron</h3></p>
+	<h3>Otherwise known as the California Rhododendron</h3>
 	<p><b>Size</b></p>
 	<p>Shrub or small tree, 3 to 15 feet (1 to 5 m) in height</p>
 	<p><b>Range</b></p>
@@ -59,6 +70,7 @@
 
 </body>
 </html>
+
 
 
 
