--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -5,11 +5,14 @@
 	<!-- meta tags and title -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Page Title</title>
+	<title>CSS Color</title>
 
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		div {
+  color: darkcyan; 
+}
 		/* in-file CSS here */
 	</style>
 
@@ -21,6 +24,11 @@
 
 </head>
 <body>
+	<h1>How does CSS use color?</h1>
+	<p>CSS can customize color in a variety of ways, including:</p>
+	<ul>
+		<li><b>Color:</b> Changes an element's color. For example, <div>this text color has been set to Dark Cyan.</div></li>
+	</ul>
 
 	<!-- HTML elements here -->
 
