--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -11,8 +11,15 @@
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
 		div {
-  color: darkcyan; 
+  color: indigo; 
 }
+		  body {
+        background-color: lavenderblush;
+    }
+		 .element {
+      border-style: solid;
+      border-color: lavender;
+    }
 		/* in-file CSS here */
 	</style>
 
@@ -27,7 +34,9 @@
 	<h1>How does CSS use color?</h1>
 	<p>CSS can customize color in a variety of ways, including:</p>
 	<ul>
-		<li><b>Color:</b> Changes an element's color. For example, <div>this text color has been set to Dark Cyan.</div></li>
+		<li><b>Color:</b> Changes an element's color. For example, <div>this text color has been set to Indigo.</div></li>
+		<li><b>Background-color:</b> Changes the color of an object's background. The body of this page has been changed to Lavender Blush.</li>
+		<li><b>Border-color:</b> Changes the border of an element, once specified, to a particular color. This element has a Lavender border.</li>
 	</ul>
 
 	<!-- HTML elements here -->
