--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -33,11 +33,11 @@
 <body>
 	<h1>How does CSS use color?</h1>
 	<p>CSS can customize color in a variety of ways, including:</p>
-	<ul>
+	<element><ul>
 		<li><b>Color:</b> Changes an element's color. For example, <div>this text color has been set to Indigo.</div></li>
 		<li><b>Background-color:</b> Changes the color of an object's background. The body of this page has been changed to Lavender Blush.</li>
 		<li><b>Border-color:</b> Changes the border of an element, once specified, to a particular color. This element has a Lavender border.</li>
-	</ul>
+	</ul></element>
 
 	<!-- HTML elements here -->
 
