--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -16,10 +16,9 @@
 		  body {
         background-color: lavenderblush;
     }
-		 .element {
-      border-style: solid;
-      border-color: lavender;
-    }
+		section {
+  border: 10px solid lavender;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -32,12 +31,14 @@
 </head>
 <body>
 	<h1>How does CSS use color?</h1>
+	<section>
 	<p>CSS can customize color in a variety of ways, including:</p>
-	<element><ul>
+	<ul>
 		<li><b>Color:</b> Changes an element's color. For example, <div>this text color has been set to Indigo.</div></li>
 		<li><b>Background-color:</b> Changes the color of an object's background. The body of this page has been changed to Lavender Blush.</li>
 		<li><b>Border-color:</b> Changes the border of an element, once specified, to a particular color. This element has a Lavender border.</li>
-	</ul></element>
+	</ul>
+	</section>
 
 	<!-- HTML elements here -->
 
