--- a/codelogs/log4.html
+++ b/codelogs/log4.html
@@ -39,6 +39,13 @@
 		<li><b>Border-color:</b> Changes the border of an element, once specified, to a particular color. This element has a Lavender border.</li>
 	</ul>
 	</section>
+	<p>CSS accepts input for defining colors in several ways:</p>
+	<ul>
+		<li><b>Named</b> colors refer to a pre-programmed list of colors that work with CSS. The examples above use named colors.</li>
+	<li><b>Hexadecimal</b> colors use a code made up of a pound sign followed by six letters and/or numbers. For example, Lavender would be #E6E6FA.</li>
+		<li><b>RGB</b> specifies a combination of red, green, and blue values to make a color. Just like mixing paint! Number values are used to define how much of each color goes into the mixture.</li>
+		<li><b>Grayscale</b>, similarly, can be rendered by defining values of black, white, and gray.</li>
+	</ul>
 
 	<!-- HTML elements here -->
 
