--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 </li>
 		<li><a href="eeveezsmith.github.io/codelogs/log2.html">Code Log 2</a></li>
 		<li><a href="eeveezsmith.github.io/codelogs/log3.html">Code Log 3</a></li>
+		<li><a href="eeveezsmith.github.io/codelogs/log4.html">Code Log 4</a>
+</li>
 	</ul>
 	<H2>Tiny Projects</H2>
 	<ul>
