--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -24,9 +24,10 @@
 <body>
 <header>
   <h1>Pineapple Upside Down Cake</h1>
-  <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" width="300" height="200" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
+  <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake">
+	
 	<main>
 		<section>
 			<h2>Ingredients</h2>
@@ -56,3 +57,4 @@
 
 </body>
 </html>
+
