--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -11,6 +11,15 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		@media only screen and (max-width: 480px) {
+  .text-block {
+    text-align: center; /* Center text on small screens */
+  }
+}
+		@media (max-width: 768px) {
+  .image-container {
+    text-align: center; /* Center the image horizontally */
+  }
 		/* in-file CSS here */
 	</style>
 
@@ -57,4 +66,5 @@
 
 </body>
 </html>
+
 
