--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -20,6 +20,14 @@
   .image-container {
     text-align: center; /* Center the image horizontally */
   }
+					img {
+  width: 500px;
+  height: auto; /* Height will adjust proportionally */
+}
+		img {
+  max-width: 100%;
+  height: auto;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -66,5 +74,6 @@
 
 </body>
 </html>
+
 
 
