--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -16,6 +16,11 @@
     text-align: center; /* Center text on small screens */
   }
 }
+			@media only screen and (max-width: 480px) {
+  h2 {
+    text-align: center; /* Center text on small screens */
+  }
+}
 		@media (max-width: 768px) {
   .image-container {
     text-align: center; /* Center the image horizontally */
@@ -74,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
