--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -33,6 +33,9 @@
   .image-container {
     text-align: center; /* Center the image horizontally */
   }
+			.container {
+  display: grid;
+}
 	
 		/* in-file CSS here */
 	</style>
@@ -47,12 +50,14 @@
 <body>
 <header>
   <h1>Pineapple Upside Down Cake</h1>
-	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
+	<div class="container">
+	<div><p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
   
 	
 	<main>
-		<img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake">
+		<img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake"></div>
+		<div>
 		<section>
 			<h2>Ingredients</h2>
 			<ul>
@@ -64,6 +69,8 @@
 				<li>Vegetable oil and eggs (refer to cake mix instructions)</li>
 			</ul>
 		</section>
+		</div>
+		<div>
 		<section>
 			<h2>Directions</h2>
 			<ol>
@@ -72,6 +79,8 @@
 				<li>Bake 42 to 48 minutes (44 to 53 minutes for dark or nonstick pan) or until toothpick inserted in center comes out clean. Immediately run knife around side of pan to loosen cake. Place heatproof serving plate upside down onto pan; turn plate and pan over. Leave pan over cake 5 minutes so brown sugar topping can drizzle over cake; remove pan. Cool 30 minutes. Serve warm or cool. Store covered in refrigerator.</li>
 			</ol>
 		</section>
+		</div>
+	</div>
 	</main>
 	<footer>
 		<p>&copy; 2025 Evelyn Z Smith</p>
@@ -81,6 +90,7 @@
 
 </body>
 </html>
+
 
 
 
