--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -33,8 +33,9 @@
   .image-container {
     text-align: center; /* Center the image horizontally */
   }
-			.container {
+.grid-container {
   display: grid;
+  grid: 150px / auto auto auto;
 }
 	
 		/* in-file CSS here */
@@ -90,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
