--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,39 +10,6 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-						img {
-  width: 500px;
-  height: auto; /* Height will adjust proportionally */
-}
-		img {
-  max-width: 100%;
-  height: auto;
-}
-		@media only screen and (max-width: 480px) {
-  h1 {
-    text-align: center; /* Center text on small screens */
-  }
-}
-			@media only screen and (max-width: 480px) {
-  h2 {
-    text-align: center; /* Center text on small screens */
-  }
-}
-		@media (max-width: 768px) {
-  .image-container {
-    text-align: center; /* Center the image horizontally */
-  }
-.grid-container {
-  display: grid;
-  grid: 150px / auto auto auto;
-}
-			.item1 {
-  grid-column-start: 2;
-}
-						.item2 {
-  grid-column-start: 3;
-}
-	
 		/* in-file CSS here */
 	</style>
 
@@ -57,14 +23,10 @@
 <body>
 <header>
   <h1>Pineapple Upside Down Cake</h1>
-	<div class="container">
+  <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" width="300" height="200" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 </header>
-  
-	
 	<main>
-		<img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake">
-		<item1>
 		<section>
 			<h2>Ingredients</h2>
 			<ul>
@@ -76,8 +38,6 @@
 				<li>Vegetable oil and eggs (refer to cake mix instructions)</li>
 			</ul>
 		</section>
-		</item1>
-		<item2>
 		<section>
 			<h2>Directions</h2>
 			<ol>
@@ -86,8 +46,6 @@
 				<li>Bake 42 to 48 minutes (44 to 53 minutes for dark or nonstick pan) or until toothpick inserted in center comes out clean. Immediately run knife around side of pan to loosen cake. Place heatproof serving plate upside down onto pan; turn plate and pan over. Leave pan over cake 5 minutes so brown sugar topping can drizzle over cake; remove pan. Cool 30 minutes. Serve warm or cool. Store covered in refrigerator.</li>
 			</ol>
 		</section>
-		</item2>
-	</div>
 	</main>
 	<footer>
 		<p>&copy; 2025 Evelyn Z Smith</p>
@@ -97,11 +55,6 @@
 
 </body>
 </html>
-
-
-
-
-
 
 
 
