--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -10,6 +10,11 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		img {
+      width: 100%;
+      max-width: 500px;
+      height: auto;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -55,6 +60,7 @@
 
 </body>
 </html>
+
 
 
 
