--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -15,6 +15,11 @@
       max-width: 500px;
       height: auto;
 }
+		<main class="grid-container">
+		.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
 		/* in-file CSS here */
 	</style>
 
@@ -28,10 +33,11 @@
 <body>
 <header>
   <h1>Pineapple Upside Down Cake</h1>
-  <img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" width="300" height="200" alt="Pineapple upside down cake">
-	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
+  
 </header>
 	<main>
+		<img src="oscar-ivan-esquivel-arteaga-oWbOTyinCDU-unsplash.jpg" alt="Pineapple upside down cake">
+	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 		<section>
 			<h2>Ingredients</h2>
 			<ul>
@@ -60,6 +66,7 @@
 
 </body>
 </html>
+
 
 
 
