--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -36,7 +36,7 @@
   
 </header>
 	<main>
-		<img src="responsive-recipe/PUCSmall.jpg" alt="Pineapple upside down cake">
+		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 		<section>
 			<h2>Ingredients</h2>
@@ -66,6 +66,7 @@
 
 </body>
 </html>
+
 
 
 
