--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -10,6 +10,13 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		{
+      h1,
+      h2 {
+            text-align: center;
+            /* Center text on small screens */
+      }
+      }
 		img {
       width: 100%;
       max-width: 500px;
@@ -66,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
