--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -22,10 +22,10 @@
       max-width: 500px;
       height: auto;
 }
-		<main class="grid-container">
-		.grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
+		<main class="flex-container">
+	.flex-container {
+  display: flex;
+  flex-direction: row;
 }
 		/* in-file CSS here */
 	</style>
@@ -73,6 +73,7 @@
 
 </body>
 </html>
+
 
 
 
