--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -10,13 +10,7 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
-		{
-      h1,
-      h2 {
-            text-align: center;
-            /* Center text on small screens */
-      }
-      }
+	
 		img {
       width: 100%;
       max-width: 500px;
@@ -27,6 +21,13 @@
   display: flex;
   flex-direction: row;
 }
+		 @media only screen and (max-width: 480px) {
+      h1,
+      h2 {
+            text-align: center;
+            /* Center text on small screens */
+      }
+      }
 		/* in-file CSS here */
 	</style>
 
@@ -73,6 +74,7 @@
 
 </body>
 </html>
+
 
 
 
