--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -24,6 +24,9 @@
   margin: 10px;
   padding: 20px;
 }
+		  .equal-column {
+    flex: 1; /* Shorthand for flex-grow: 1, flex-shrink: 1, flex-basis: 0% */
+  }
 		 @media only screen and (max-width: 480px) {
       h1,
       h2 {
@@ -86,6 +89,7 @@
 
 </body>
 </html>
+
 
 
 
