--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -24,9 +24,11 @@
   margin: 10px;
   padding: 20px;
 }
-		  .equal-column {
-    flex: 1; /* Shorthand for flex-grow: 1, flex-shrink: 1, flex-basis: 0% */
+	@media (max-width: 800px) {
+  .flex-container {
+    flex-direction: column;
   }
+}
 		 @media only screen and (max-width: 480px) {
       h1,
       h2 {
@@ -89,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
