--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -53,13 +53,13 @@
   
 </header>
 	<div class="container">
-		<div>
+		<div style="flex-grow: 1">
 	<main>
 		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 		<section>
 		</div>
-			<div>
+			<div style="flex-grow: 2">
 			<h2>Ingredients</h2>
 			<ul>
 				<li>1/4 cup butter</li>
@@ -71,7 +71,7 @@
 			</ul>
 		</section>
 		</div>
-		<div>
+		<div style="flex-grow: 2">
 		<section>
 			<h2>Directions</h2>
 			<ol>
@@ -91,6 +91,7 @@
 
 </body>
 </html>
+
 
 
 
