--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -10,6 +10,9 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		    p {
+      line-height: 2;
+    }
 	
 		img {
       width: 100%;
@@ -91,6 +94,7 @@
 
 </body>
 </html>
+
 
 
 
