--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -16,9 +16,12 @@
 	    ul {
       line-height: 1.5;
     }
+		    ol {
+      line-height: 1.5;
+    }
 		img {
       width: 100%;
-      max-width: 500px;
+      max-width: 300px;
       height: auto;
 }
 	.container {
@@ -96,6 +99,7 @@
 
 </body>
 </html>
+
 
 
 
