--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -20,8 +20,8 @@
       line-height: 1.5;
     }
 	img {
-  max-width: 50%;
-  height: auto;
+  width: auto;
+  height: 250px;
 }
 .flex-container {
   display: flex;
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
