--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -63,13 +63,13 @@
   
 </header>
 	<div class="container">
-		<div style="flex-grow: 1">
+		<div>
 	<main>
 		<img src="PUCSmall.jpg" alt="Pineapple upside down cake">
 	<p>Delicious and easy to make, even for inexperienced bakers, the pineapple upside down cake requires only a handful of ingredients and minimal preparation. It also happens to be my mom's favorite!</p>
 		<section>
 		</div>
-			<div style="flex-grow: 2">
+			<div>
 			<h2>Ingredients</h2>
 			<ul>
 				<li>1/4 cup butter</li>
@@ -81,7 +81,7 @@
 			</ul>
 		</section>
 		</div>
-		<div style="flex-grow: 2">
+		<div>
 		<section>
 			<h2>Directions</h2>
 			<ol>
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
