--- a/responsive-recipe/index.html
+++ b/responsive-recipe/index.html
@@ -29,7 +29,7 @@
 }
 
 /* Responsive layout - makes a one column layout instead of a two-column layout */
-@media (max-width: 400px) {
+@media (min-width: 600px) {
   .flex-container {
     flex-direction: column;
   }
@@ -101,6 +101,7 @@
 
 </body>
 </html>
+
 
 
 
