--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -10,6 +10,10 @@
 	<!-- external and internal CSS -->
 	<link rel="stylesheet" href="styles.css" media="all">
 	<style>
+		  img {
+      width: 250px; /* Sets a fixed width */
+      height: auto /* Sets a fixed height */
+    }
 		/* in-file CSS here */
 	</style>
 
