--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -30,7 +30,7 @@
 <p>In the above examples, using the "image" function, the images are typically displayed in-line with the text and other elements on the surface of the page. But images can also be used as the background for a page or portion of the page by using the "background-image" function.</p> 
 
 <p>There are many CSS properties to customize the display of an image. A property called “Border Radius” can be used to create a soft-edged or rounded image:</p>
-<img src="IMG_0657.jpg" border-radius: 8px alt="baby bunny"> <img src="IMG_0657.jpg" border-radius: 50% alt="baby bunny"> 
+<img src="IMG_0657.jpg" alt="baby bunny" style="border-radius: 10px;"> <img src="IMG_0657.jpg" alt="baby bunny" style="border-radius: 50%;"> 
 <p>CSS can also be used to create thumbnail images, which can also be made into links:</p>
 
 <p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. The evolution of video games is a well-known example of resolution.</p>
