--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -14,7 +14,13 @@
       width: 250px; /* Sets a fixed width */
       height: auto /* Sets a fixed height */
     }
-	
+	   body {
+      background-color: lightgray;
+    }
+		img {
+  display: block; /* Convert the image to a block-level element */
+  margin: 0 auto; /* Auto margins will horizontally center it */
+}
 		/* in-file CSS here */
 	</style>
 
@@ -35,7 +41,7 @@
 <p>CSS can also be used to create thumbnail images, which can also be made into links:</p>
 	<img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;"> <img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}"> <a target="https://waifanimals.org/" href="IMG_1024.JPG">
+}"> <a target="https://waifanimals.org/" href="IMG_1024.JPG"></a>
 
 <p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. The evolution of video games is a well-known example of resolution.</p>
 
