--- a/codelogs/log5.html
+++ b/codelogs/log5.html
@@ -36,7 +36,7 @@
 <p>There are many CSS properties to customize the display of an image. A property called “Border Radius” can be used to create a soft-edged or rounded image:</p>
 <img src="IMG_0657.jpg" alt="baby bunny" style="border-radius: 10px;"> <img src="IMG_0657.jpg" alt="baby bunny" style="border-radius: 50%;"> 
 <p>CSS can also be used to create thumbnail images, which can also be made into links:</p>
-	<img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;"> <a target="https://waifanimals.org/" href="IMG_1024.JPG"><img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;img:hover {
+	<img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;"> <a target="IMG_1024.JPG" href="https://waifanimals.org/"><img src="IMG_1024.JPG" alt="cat" style="border: 1px solid #ddd;border-radius: 4px;padding: 5px;img:hover {
   box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);"></a>
 
 <p>Dimensions determine the physical size of an image (how large it appears on screen), while resolution refers more to the amount of visual information contained in the image. The evolution of video games is a well-known example of resolution.</p>
